--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
-  "script": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
